--- a/WpfComboBox/MainWindow.xaml
+++ b/WpfComboBox/MainWindow.xaml
@@ -8,14 +8,11 @@
         Title="MyWind" Height="350" Width="525">
     <Grid>
         <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Height="35" Margin="359,277,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
-        <ComboBox x:Name="comboBox" HorizontalAlignment="Left" Height="21" Margin="0,10,0,0" VerticalAlignment="Top" Width="465" 
+        <ComboBox x:Name="comboBox" HorizontalAlignment="Left" Height="21" Margin="0,10,0,0" VerticalAlignment="Top" Width="299" 
             ItemsSource ="{Binding MyList}" MaxDropDownHeight="800">
-            <!--ItemsSource ="{Binding RelativeSource= {RelativeSource Mode=FindAncestor, AncestorType=Window}, Path=MyList}" MaxDropDownHeight="800">-->
-            <!--ItemsSource ="{Binding ElementName=MyWind, Path=MyList}">-->
-            <!--ItemsSource ="{Binding RelativeSource= {RelativeSource Mode=FindAncestor, AncestorType=Window}, Path=MyList}">-->
             <ComboBox.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock Text="{Binding Name1}"/>
+                    <TextBlock Text="{Binding Name}"/>
                 </DataTemplate>
             </ComboBox.ItemTemplate>
         </ComboBox>
