--- a/ComboBoxWPFmy/MainWindow.xaml
+++ b/ComboBoxWPFmy/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ComboBoxWPFmy.MainWindow"
+﻿<Window x:Name="myWnd" x:Class="ComboBoxWPFmy.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,9 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Window.Resources>
-        <local:StatusList x:Key="StatusList"/>
+        <!--<local:StatusList x:Key="StatusList"/>-->
+        <!--<local: x:Key="StatusList"/>-->
+
     </Window.Resources>
     <Grid>
         <DataGrid x:Name="dgData" AutoGenerateColumns="False">
@@ -22,9 +24,10 @@
 
                     <DataGridTemplateColumn.CellEditingTemplate>
                         <DataTemplate>
-                            <ComboBox Height="22" 
-                                      ItemsSource="{StaticResource StatusList}"
-                                      SelectedItem="{Binding Status}"/>
+                            <!--<ComboBox Height="22" ItemsSource="{StaticResource StatusList}" SelectedItem="{Binding Status}"/>-->
+                            <ComboBox Height="22" ItemsSource="{Binding Statut, ElementName=myWnd}" SelectedItem="{Binding Status}"/>
+
+
                         </DataTemplate>
                     </DataGridTemplateColumn.CellEditingTemplate>
 
